header wrap fix, banner-text fix

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     font-size: 1rem;
     font-style: normal;
     font-weight: 400;
+    line-height: 2;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -53,37 +54,35 @@ Header
     display:flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    padding: 1rem 1rem;
+    padding: 1rem 1rem .5rem 1rem;
 }
 
 .logo{
     flex-grow: 1;
     align-self: flex-start;
+    order: 1;
 }
 
 .logo img{
     max-width: 120px;
-    margin: 0 auto;
 }
 
 .nav{
-    display: inline;
-    align-self: center;
+    justify-content: center;
+    align-items: center;
     flex-grow: 2;
-    margin: 0;
-    padding: 0;
+    order: 3;
 }
 
 .nav ul{
-    text-align: center;
-    display: inline-flex;
-    justify-content: space-between;
+    display: flex;
+    justify-content: center;
     font-size: 14px;
+    border-top: 1px solid #d7d7d7;
+    padding-top:
 }
 
 .nav li{
-    text-align: center;
-    width: 100%;
     font-weight: 700;
     margin: 0 1rem;
 }
@@ -95,11 +94,16 @@ Header
     font-weight: 400;
 }
 
+.nav a:hover{
+    color: black;
+}
+
 .cart{
     flex-grow: 1;
     align-self: flex-start;
     text-align: right;
     width: 50px;
+    order: 2;
 }
 
 .cart img{
@@ -118,8 +122,10 @@ Banner
     height: 400px;
     position: relative;
 }
-
-.banner-text{
+.banner .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .collection{
@@ -127,18 +133,13 @@ Banner
     font-size: 1.25rem;
     text-transform: uppercase;
     color: white;
-    text-align: center;
-    position: relative;
-    top: 160px;
 }
 
 .season{
     font-family: "Playfair Display",serif;
     font-size: 2.5rem;
     color: white;
-    text-align: center;
-    position: relative;
-    top: 170px;
+
 }
 
 /* =================================================================================
@@ -296,11 +297,16 @@ Footer
 }
 
 .site-footer a{
+    color: #ffffff;
+}
+
+.site-footer a:hover{
     color: coral;
 }
 
 .footer-inner{
-    font: inherit;
+    font-family: "Playfair Display", serif;
+    font-weight: 300;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -310,11 +316,12 @@ Footer
 
 .footer-left{
     text-align: left;
-    padding-left: 10px;
+    padding-left: 20px;
+    line-height: 1.5;
     justify-content: center;
 }
 
-.copywrite p, .contact, .address{
+.copywrite p, .contact p, .address p{
     text-align: left;
     font-size: 16px;
 }
@@ -329,6 +336,7 @@ Footer
     padding-right: 20px;
 }
 .media li{
+    line-height: 2;
     list-style-type: none;
 }
 .media li a{
@@ -347,3 +355,17 @@ Footer
     font-size: 20px;
 }
 
+/* Styles above here are "mobile first" */
+@media screen and (min-width: 531px){
+ .logo{
+    order: 1;
+ }
+
+ .nav{
+    order: 2;
+ }
+
+ .cart{
+    order: 3;
+ }
+}
